# yt-wallpaper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ytwall.spec
.github/workflows/: build-windows.yml
scripts/: build_exe.ps1
src/ytwall/: __init__.py  __main__.py  app.py  artwork.py  autostart.py  config.py  downloader.py  library.py  music_player.py  pause_monitor.py  playlists.py  soundcloud.py  styles.py  tray.py  wallpaper.py
src/ytwall/widgets/: clip_card.py  download_tab.py  library_tab.py  main_window.py  mini_player.py  music_tab.py  settings_tab.py  track_row.py
