[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytwall"
version = "0.1.0"
description = "YouTube to live video wallpaper for Windows 11"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Doris" }]
dependencies = [
    "PySide6>=6.6",
    "yt-dlp>=2024.8.6",
    "python-mpv>=1.0.7",
    "pywin32>=306; sys_platform == 'win32'",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyinstaller>=6.6",
]

[project.scripts]
ytwall = "ytwall.__main__:main"

[project.gui-scripts]
ytwall-gui = "ytwall.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
